@@ -13,9 +13,6 @@
 -make updating of parameters happen based on time elapsed rather then
  frames
 
--add fake flip controls on devices where we are already limiting the
- formats which can be set
-
 -add reverse cropping (adding black borders) to get from 320x232 ->
  320x240, for zc3xx webcams with a broken (last row of jpeg blocks missing)
  320x240 mode
