@@ -9,6 +9,7 @@ libv4l-0.5.98
 * Add ability to determine upside down cams based on DMI info
 * Fix a bug in v4lconvert_uyvy_to_yuv420()
 * Add support for separate vflipping and hflipping
+* Add fake controls controlling the software h- and v-flipping
 
 libv4l-0.5.97
 -------------
